--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -36,7 +36,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
-    "next": "16.0.7",
+    "next": "14.2.5",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.4",
     "react": "19.2.0",
@@ -47,8 +47,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-screen-size": "^1.4.11",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -56,7 +56,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
