--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@lexical/code": "^0.39.0",
     "@lexical/file": "^0.39.0",
     "@lexical/hashtag": "^0.39.0",
@@ -66,6 +67,7 @@
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
+    "sass": "^1.97.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
